# AlarmClockFinalBuild

./: CMakeLists.txt  WARNINGS.gitattributes  sdkconfig  sdkconfig.old
.cache/clangd/index/: led_strip.h.71F3F42B6D4BF7CA.idx  led_strip_api.c.FA0573196DD8DFA0.idx  led_strip_interface.h.ABEBDA7719D9928C.idx  led_strip_rmt.h.E952C383AD6EED30.idx  led_strip_rmt_dev.c.4B99095D188CAAB1.idx  led_strip_rmt_encoder.c.4292AD06F0EC14BA.idx  led_strip_rmt_encoder.h.33AB28865E88051D.idx  led_strip_spi.h.7A53EB677E91F538.idx  led_strip_spi_dev.c.AAFDAAE88256550B.idx  led_strip_types.h.D1F36758563D54B6.idx  main.c.98DAABC629607340.idx  mp3.c.934565C34236FCF2.idx  mp3.h.AA63F4F8F3FA2D5A.idx  smallfont.c.FACE4DE29995DDF7.idx  smallfont.h.56D9C228758D6C37.idx  songs.c.22579889C0929B12.idx  songs.h.60DAC6BC9DD128C9.idx  ssd1309.c.A0CE060FB9C0B6E5.idx  ssd1309.h.B887E3C7AB2E347E.idx
main/: CMakeLists.txt  main.c  mp3.c  mp3.h  smallfont.c  smallfont.h  songs.c  songs.h  ssd1309.c  ssd1309.h
